Assets management (#3)
* feat: added assets manager stubs

* feat: asset management

pretty feature complete

* fix: versioning race condition
